# pbp

./: Cargo.toml  README.md
examples/: print.rs  read_sig.rs  round_trip.rs  verify_sig.rs
examples/props/: data.txt  key.txt  sig.txt
src/: ascii_armor.rs  key.rs  lib.rs  packet.rs  pgp.rs  sig.rs
