[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "Generate ed25519 OpenPGP keys."
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "pbp"
version = "0.1.0"
repository = "https://github.com/withoutboats/pbp"

[dependencies]
base64 = "0.8.0"
byteorder = "1.1.0"
digest = "0.6.2"
sha1 = "0.2.0"
sha2 = "0.6.0"

[dependencies.ed25519-dalek]
version = "0.5.0"
optional = true

[features]
dalek = ["ed25519-dalek"]

[dev-dependencies]
rand = "0.3.18"
