[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "bridge non-PGP system to PGP data format"
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "pbp"
version = "0.2.0"
repository = "https://github.com/withoutboats/pbp"

[dependencies]
base64 = "0.9.2"
byteorder = "1.1.0"
digest = "0.6.2"
sha1 = "0.2.0"
typenum = "1.9.0"
failure = "0.1.1"
bitflags = "1.0.1"

[dependencies.ed25519-dalek]
version = "0.5.0"
optional = true

[features]
dalek = ["ed25519-dalek"]

[dev-dependencies]
rand = "0.3.18"
sha2 = "0.6.0"
